@@ -1,22 +1,0 @@
-<?php
-/***************************************************************************
- *   Copyright (C) 2004-2006 by Sveta Smirnova                             *
- *   sveta@microbecal.com                                                  *
- *                                                                         *
- *   This program is free software; you can redistribute it and/or modify  *
- *   it under the terms of the GNU General Public License as published by  *
- *   the Free Software Foundation; either version 2 of the License, or     *
- *   (at your option) any later version.                                   *
- *                                                                         *
- ***************************************************************************/
-/* $Id$ */
-
-	/**
-	 * Common mistyped name for Singleton pattern.
-	 * 
-	 * @deprecated indeed.
-	 * 
-	 * @ingroup Base
-	**/
-	abstract class Singletone extends Singleton {/*_*/}
-?>
